--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chrome-cookies-secure": "^1.3.2",
     "express": "^4.17.1",
     "puppeteer": "^5.5.0",
     "typescript": "^4.1.3"
